@@ -49,10 +49,10 @@ struct atag_d {
 #define __atag_0 __used __section(.atag.0)
 #define __atag_1 __used __section(.atag.1)
 #define __atag_2 __used __section(.atag.2)
-#define __atag_3 __used __section(.atag.2)
-#define __atag_4 __used __section(.atag.2)
-#define __atag_5 __used __section(.atag.2)
-#define __atag_6 __used __section(.atag.2)
-#define __atag_7 __used __section(.atag.2)
+#define __atag_3 __used __section(.atag.3)
+#define __atag_4 __used __section(.atag.4)
+#define __atag_5 __used __section(.atag.5)
+#define __atag_6 __used __section(.atag.6)
+#define __atag_7 __used __section(.atag.7)
 
 #endif  /* __ATAG_H__ */
