@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jul 23 22:39:05 2006
+# Tue Jul 25 17:42:02 2006
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV5=y
@@ -45,6 +45,7 @@ CONFIG_NOR_BANK0_START=0x50000000
 CONFIG_NOR_BANK0_LENGTH=0x00800000
 CONFIG_ENV_STARTUP=""
 CONFIG_MACH="ixp42x"
+CONFIG_RAMDISK_SIZE=0x00400000
 CONFIG_MACH_NSLU2=y
 # CONFIG_MACH_AVILA2347 is not set
 # CONFIG_USER_DEFAULTENDIAN is not set
@@ -110,10 +111,10 @@ CONFIG_ENV_MUTABLE=y
 # CONFIG_ENV_LINK is not set
 CONFIG_ENV_REGION="nor:0x7fc000+15k"
 CONFIG_ENV_STARTUP_KERNEL_COPY=y
-CONFIG_ENV_REGION_KERNEL="fis://kernel"
+CONFIG_ENV_REGION_KERNEL="fis://kernel@16"
 CONFIG_ENV_REGION_KERNEL_SWAP=y
 CONFIG_ENV_STARTUP_RAMDISK_COPY=y
-CONFIG_ENV_REGION_RAMDISK="fis://ramdisk"
+CONFIG_ENV_REGION_RAMDISK="fis://ramdisk@16"
 CONFIG_ENV_REGION_RAMDISK_SWAP=y
 # CONFIG_ENV_DEFAULT_CMDLINE_OVERRIDE is not set
 CONFIG_USES_NOR_BOOTFLASH=y
